# CNeural

./: CMakeLists.txt  README.md
docs/doxygen/: Doxyfile
docs/doxygen/html/: _c_neural_8c.html  _c_neural_8c_source.html  _c_neural_8h.html  _c_neural_8h_source.html  _c_neural__backpropagation_8c.html  _c_neural__backpropagation_8c_source.html  _c_neural__draw_8c_source.html  annotated.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_88826aa2a10e1882b573f502bc7f4b55.html  doxygen_crawl.html  files.html  functions.html  functions_vars.html  globals.html  globals_func.html  index.html  main_8c_source.html  struct_layer.html  struct_neural_network.html  struct_node.html
docs/doxygen/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  classes_0.js  classes_1.js  files_0.js  functions_0.js  searchdata.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_7.js
docs/doxygen/mainpage/: mainpage.md
docs/doxygen/rtf/: refman.rtf
src/: CNeural.c  CNeural.h  CNeural_backpropagation.c  main.c
src/examples/ctof/: main.c
src/examples/mnist/: main.c
src/misc/: CNeural_draw.c
